pl 15.jcn3
	- bf: smob fix?
	- mutopia/doc target 'local-web':
	  shorthand for 'CONFIGSUFFIX=www local-WWW'

pl 15.jcn2
	- small website fixes

pl 15.jcn1
	- bfs: initialise members of Column-x-positions and Break_node
	- bf: Documentation/misc: don't include backups
	- bf:  .gdbinit

pl 15  (Oct 18)

14.jcn1
	- Kludge for accented chars (thanks, Mats)
	- bf: don't fail on error in doco package
	- doco package: noarch
	- bf: standchen: mutopia prep

14.hwn1
	- move some misc stuff into Documentation/misc/
	- cleanups: slur & beam.
	- junked Encompass_info
	- Smobs -- simplifies sc_elt memory management
	- Timing_engraver collects bar reqs
	- unfold all if doing MIDI.
	- bfs: do something sensible if it doesn't fit.
	- penalties for break stuff supported.

*******
13.jcn2,3
	- mutopia/J.S.Bach/Petites-Preludes: bf's and mutopia preraration
	- separate documentation package

13.hwn2
	- mutopia: scs2, horn-concerto-3
	- junked Line_spacer baseclass.
	- removed gourlay complications
	- use force iso. energy for minimisation. Add uniformity term
to demerits.

13.jcn1
	- bf: mudela-book

*******
12.jcn1
	- auto-knees, input/test/auto-knee.ly

pl 12.rrr2
	- voltaSpannerDuration may be a rational
	- .ly files corrected, Voice.dynamicDir to Voice.dynamicDirection

pl 12.rrr1
 	- key (K:) with clef, bug fix for abc2ly
 	- voltaSpannerDuration code added to lilypond

pl 12.hwn1
	- junked wordwrap
	- bf: use position (not pitch) for autochange
	- mudela-book fixes: --dependencies, --dep-prefix
	- mudela.tely more updates.  Now absorbed LilyPond manpage. 
	- BUGS now in INSTALL.texi

*******
pl 11.uu1
	- changed debug init code.

pl 11.jcn2
	- bf: LDFLAGS=foo CFLAGS=bar ./configure
	- bf: configure (--disable-printing = default) -DNPRINT
	- bf: mf-to-xpms / make -C mf xpms; feta-accordion is broken,
	  see mf/README

pl 11.jcn1
	- gnossiene with new \autochange

pl 11.jbr1
        - Tried to get rid of path and switch dependencies in mf
          build process.

pl 11.hwn1