@@ -1,0 +1,4 @@
+#(begin (newline)(display "hello world")(newline))\score{
+	\notes\relative c'{ c }
+}
+
